python/testData/inspections/UnresolvedWith.py
<error descr="Unresolved reference 'with'">with</error><error descr="end of statement expected"> </error>open("x.txt")<error descr="end of statement expected"> </error><error descr="Unresolved reference 'as'">as</error><error descr="end of statement expected"> </error><error descr="Unresolved reference 'f'">f</error><error descr="end of statement expected">:</error><EOLError descr="statement expected, found Py:COLON"></EOLError>
    <error descr="statement expected, found Py:INDENT">d</error>ata = <error descr="Unresolved reference 'f'">f</error>.read()